--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,12 @@
 name = "war_card_game"
 version = "0.1.0"
 edition = "2021"
+authors = [ "Bartosz Cieśla <bartosz.ciesla@gmail.com>" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.2.1", features = ["derive"] }
 enum-iterator = "1.3.0"
 itertools = "0.10.5"
 rand = "0.8.5"
