--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,15 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Rust
-        uses: actions/checktout@v3
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
+      - uses: actions/checktout@v3
       - name: Build
         run: cargo build --verbose
       - name: Test
         run: cargo test --verbose
       - name: Clippy
         run: cargo clippy --verbose -- -D warnings
-      - name: Audit
-        run: cargo audit
