--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,9 +17,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
       - name: Build
         run: cargo build --verbose
       - name: Test
         run: cargo test --verbose
       - name: Clippy
         run: cargo clippy --verbose -- -D warnings
+      - name: Check Formatting
+        run: cargo fmt -- --check
+      - name: Audit
+        run: cargo audit
