--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,13 @@ name = "war_card_game"
 version = "0.1.0"
 edition = "2021"
 authors = [ "Bartosz Cieśla <bartosz.ciesla@gmail.com>" ]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+licence = "MIT"
+description = "War (card game) simulation"
+homepage = "https://github.com/BartoszCiesla/war_card_game"
+repository = "https://github.com/BartoszCiesla/war_card_game"
+readme = "README.md"
+keywords = ["game", "simulation", "cards", "war", "deck"]
+categories = ["games", "simulation"]
 
 [dependencies]
 clap = { version = "4.2.1", features = ["derive"] }
