--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "war_card_game"
 version = "0.1.0"
 edition = "2021"
 authors = [ "Bartosz Cieśla <bartosz.ciesla@gmail.com>" ]
-licence = "MIT"
+license = "MIT"
 description = "War (card game) simulation"
 homepage = "https://github.com/BartoszCiesla/war_card_game"
 repository = "https://github.com/BartoszCiesla/war_card_game"
