--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ clap = { version = "4.2.1", features = ["derive"] }
 enum-iterator = "1.3.0"
 itertools = "0.10.5"
 rand = "0.8.5"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
