--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Audit
         run: cargo audit
 
-  tag:
+  check_tag:
     needs: build
     runs-on: ubuntu-latest
 
@@ -39,15 +39,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Check if only Cargo.toml and Cargo.lock are changed
-        uses: tj-actions/changed-files@v36.1.0
-        id: check_changes
-        with:
-          files: |
-            Cargo.toml
-            Cargo.lock
       - name: Extract version from Cargo.toml
-        if: ${{ steps.check_changes.outputs.all_modified_files == 'Cargo.toml Cargo.lock' }}
         id: extract_version
         run: |
           version=$(cargo pkgid | cut -d# -f2 | cut -d: -f2)
@@ -55,19 +47,32 @@ jobs:
           echo "::notice ::Version from Cargo.toml $version"
       - name: Check if version is a Git tag
         uses: mukunku/tag-exists-action@v1.2.0
-        if: ${{ steps.check_changes.outputs.all_modified_files == 'Cargo.toml Cargo.lock' }}
         id: check_git_tag
         with:
-          tag: 'v${{ steps.extract_version.outputs.version }}'
+          tag: '${{ steps.extract_version.outputs.version }}'
+
+    outputs:
+      version: ${{ steps.extract_version.outputs.version }}
+      exists: ${{ steps.check_git_tag.outputs.exists }}
+
+  tag:
+    if: ${{ needs.check_tag.outputs.exists == 'false' && github.ref == 'refs/heads/master' }}
+    needs: check_tag
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Create tag
-        if: ${{ steps.check_git_tag.outputs.exists == 'false' }}
         id: tagging
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git tag -a v${{ steps.extract_version.outputs.version }} -m "v${{ steps.extract_version.outputs.version }}"
-          git push origin v${{ steps.extract_version.outputs.version }}
-          echo "::notice ::Created v${{ steps.extract_version.outputs.version }} tag"
+          git tag -a ${{ needs.check_tag.outputs.version }} -m "${{ needs.check_tag.outputs.version }}"
+          git push origin ${{ needs.check_tag.outputs.version }}
+          echo "::notice ::Created ${{ needs.check_tag.outputs.version }} tag"
           echo "created=true" >> $GITHUB_OUTPUT
       - name: Get Repository Name
         id: repository
@@ -75,11 +80,11 @@ jobs:
 
     outputs:
       created: ${{ steps.tagging.outputs.created }}
-      version: v${{ steps.extract_version.outputs.version }}
+      version: ${{ needs.check_tag.outputs.version }}
       executable: ${{ steps.repository.outputs.name }}
 
   release:
-    if: ${{ needs.tag.outputs.created == 'true'}}
+    if: ${{ github.ref == 'refs/heads/master' && needs.tag.outputs.created == 'true'}}
     needs: tag
     runs-on: ${{ matrix.os }}
 
