Fix typo in CI flow step

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -149,7 +149,7 @@ jobs:
       - name: Print message
         run: echo "::notice ::Created ${{ needs.release.outputs.version }} release"
 
-  cargp-publish:
+  cargo-publish:
     needs: publish
     runs-on: ubuntu-latest
 
