--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "war_card_game"
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 authors = ["Bartosz Cieśla <bartosz.ciesla@gmail.com>"]
 license = "MIT"
@@ -14,10 +14,14 @@ categories = ["games", "simulation"]
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
 enum-iterator = "2.1.0"
-itertools = "0.13.0"
-rand = "0.8.5"
+itertools = "0.14.0"
+rand = "0.9.0"
 
 [profile.release]
 strip = true
 opt-level = "z"
 lto = true
+
+[package.metadata.binstall]
+pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }{ archive-suffix }"
+bin-dir = "{ bin }{ binary-ext }"
