--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -109,13 +109,13 @@ jobs:
       - name: Create ${{ matrix.target }} artifact
         run: |
           tar cvfz ${{ needs.tag.outputs.executable }}-${{ matrix.archive }} ${{ needs.tag.outputs.executable }}
-        if: ${{ matrix.platform.os == 'ubuntu-latest' }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Create ${{ matrix.platform.file }} artifact
-        uses: vimtor/action-zip@v1.2
+        uses: vimtor/action-zip@v1
         with:
           files: ${{ needs.tag.outputs.executable }}
           dest: ${{ needs.tag.outputs.executable }}-${{ matrix.archive }}
-        if: ${{ matrix.platform.os == 'windows-latest' }}
+        if: ${{ matrix.os == 'windows-latest' }}
       - name: Upload ${{ matrix.platform.file }} artifact
         uses: actions/upload-artifact@v4
         with:
@@ -133,7 +133,7 @@ jobs:
 
     steps:
       - name: Download files
-        uses: actions/download-artifact@v4.1.8
+        uses: actions/download-artifact@v4
       - run: find
       - name: Release
         uses: softprops/action-gh-release@v2
@@ -155,7 +155,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1.0.7
+        uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
